--- a/views/pages/getmd.ejs
+++ b/views/pages/getmd.ejs
@@ -8,9 +8,12 @@
     </head>
     <body>
         <h2 class="textcenter">Submit a file to view its filesize.</h2>
-        <div class="bottomcenter">
-            <input type="file" id="fileInput"/>
-            <label for="fileInput"><span>Choose a file</span><img src="./upload.png" alt="..."/></file>
+        <div class="center">
+            <div>
+                <input type="file" id="fileInput"/>
+                <label for="fileInput"><span>Choose a file</span><img src="./upload.png" alt="..."/></label>
+                <button>Submit</button>
+            </div>
         </div>
         <script type="text/javascript" src="/fileInput.js"></script>
     <body>
