--- a/public/styles.css
+++ b/public/styles.css
@@ -39,12 +39,13 @@ h1 {
     text-align: center;
 }
 
-.bottomcenter {
+.center {
     position: absolute;
-    top: 75%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
 
 #fileInput {
     width: 0.1px;
@@ -55,7 +56,7 @@ h1 {
 	z-index: -1;
 }
 
-label {
+label, button {
     font-family: 'Raleway', sans-serif;
     font-size: 16px;
     letter-spacing: 2px;
@@ -79,11 +80,41 @@ label {
     box-shadow: 0 2px 10px rgba(0,0,0,.52), 0 0 0 1px rgba(0,0,0,.04);
 }
 
-label:focus, label:active {
+label {
+    opacity: .7;
+    box-shadow: none;
+    background: #fff;
+    color: #60586f;
+    border: solid 2px;
+    padding: 13px 15px;
+    line-height: 1.5;
+}
+
+button {
+    display: block;
+    margin: 20px auto;
+}
+
+button:active {
     box-shadow: none;
 }
 
-label > img{
-    width: 16px;
+button:focus {
+    outline: none;
+}
+
+label>img{
+    width: 14px;
     margin: 0 0 0 10px;
+}
+
+@media screen and (max-width: 520px) {
+    button, label {
+        font-size: 13px;
+    }
+    
+    .center>div {
+        width: 100vw;
+        text-align:center;
+    }
 }
