--- a/views/pages/getmd.ejs
+++ b/views/pages/getmd.ejs
@@ -10,9 +10,11 @@
         <h2 class="textcenter">Submit a file to view its filesize.</h2>
         <div class="center">
             <div>
-                <input type="file" id="fileInput"/>
-                <label for="fileInput"><span>Choose a file</span><img src="./upload.png" alt="..."/></label>
-                <button>Submit</button>
+                <form action="/" method="post" enctype="multipart/form-data">
+                    <input name="uploadedFile" type="file" id="fileInput" accept="*"/>
+                    <label for="fileInput"><span>Choose a file</span><img src="./upload.png" alt="..."/></label>
+                    <button type="submit">Submit</button>
+                </form>
             </div>
         </div>
         <script type="text/javascript" src="/fileInput.js"></script>
